--- a/index.html
+++ b/index.html
@@ -3,35 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Formas Geométricas</title>
-<style>
-.container {
-display: flex;
-justify-content: space-around;
-align-items: center;
-height: 100vh;
-background-color: #f4f4f4;
-}
-.quadrado {
-width: 100px;
-height: 100px;
-background-color: blue;
-}
-.circulo {
-width: 100px;
-height: 100px;
-background-color: red;
-border-radius: 50%;
-}
-.triangulo {
-width: 0;
-height: 0;
-
-border-left: 50px solid transparent;
-border-right: 50px solid transparent;
-border-bottom: 100px solid green;
-}
-</style>
+<title>Formas Geométricas</title><link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 <div class="container">
